# MLOps_Equipo19

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  drift_features_details.csv  models.dvc  prueba_dvc.txt.dvc  pyproject.toml  requirements.txt
.dvc/: config
MLOps_Equipo19/: test.txt.dvc
MLOps_Equipo19/.dvc/: config
data/: raw.dvc
data/processed/: .gitignore  transformer.pkl.dvc
data/raw/: .gitignore  turkis_music_emotion_original.csv  turkis_music_emotion_original.csv.dvc
docs/: MLFLOW_USAGE.md  PIPELINE.md  REPRODUCIBILITY.md  mkdocs.yml
docs/docs/: index.md
mlops/: MLFLow_Equipo19.py  __init__.py  config.py  dataset.py  features.py  mlflow.py
mlops/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/207920027952637974/: meta.yaml
mlruns/372368221755382885/: meta.yaml
models/: lightgbm.pkl  random_forest.pkl
notebooks/: MLOPS_FASE1.2 ML.ipynb  MLOPS_FASE1.ipynb  drift_detector.py  multiple_drift_detector.py
scripts/: detect_drift.py  drift_mlflow.py  evaluate_f1.py  generate_production_data.py  setup_dvc_s3.py  setup_dvc_s3.sh  validate_reproducibility.py
src/: __init__.py  data_processor.py  drift_detector.py  dvc.py  dvcS3.py  experiments_mlflow.py  feature_transformer.py  model_trainer.py  plotter.py  reproducibility.py  test.py  train_grid_search_mlflow.py  train_models_for_api.py  train_multiple_experiments_mlflow.py  train_pipeline.py  train_with_mlflow.py
tests/: README.md  test_data.py  test_data_processor.py  test_feature_transformer.py  test_mlflow.py  test_model_trainer.py  test_plotter.py
(+1643 files in other folders)
